# codegate

./: .gitignore  Dockerfile  IMPLEMENTATION-PLAN.md  LICENSE  PROJECT-CLAUDE.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: settings.json  settings.local.json
ci/: azure-pipelines-pr-review.yml  github-review.yml
commands/: findings-schema.json  review-mode-docs-chore.md  review-mode-migration.md  review-mode-security.md  review-mode-standard.md  review-pr-core.md  review-pr.claude.md  rules-schema.json  scoring.md
docs/: architecture.md
docs/features/: ci-integration.md  duplicate-detection.md  fix-verification.md  learning-system.md  post-findings.md  review-modes.md  rules-engine.md  scoring.md  vcs-cli.md
src/: cli.py  config.py  post_findings.py  pr_scorer.py  score_comparison.py  vcs.py
src/activities/: base_activity.py  fetch_file_content_activity.py  fetch_file_diff_activity.py  fetch_pr_comments_activity.py  fetch_pr_details_activity.py  post_fix_reply_activity.py  post_pr_comment_activity.py  update_summary_activity.py
src/models/: review_models.py
src/utils/: logger.py  markdown_formatter.py  url_sanitizer.py
templates/: .codereview-rules.yml  .codereview.md  .codereview.yml
templates/.codereview/: config.yml  conventions.md
templates/.codereview/modules/: _example.yml
tests/: conftest.py  test_cli.py  test_extract_signatures.py  test_findings_schema.py  test_post_findings.py  test_pr_scorer.py  test_vcs_cli.py
tests/fixtures/: sample_findings.json
tools/: extract_signatures.py
