[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegate"
version = "0.1.0"
description = "AI-powered PR code reviewer supporting Azure DevOps and GitHub"
requires-python = ">=3.11"
dependencies = [
    "azure-devops>=7.1,<8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "msrest",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
